# RAG-management-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  tasks.md
backend/: README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7b906f68747b_add_document_chunks_table.py  b4a466ed01a3_add_metadata_to_messages.py  bf77918e0cd2_add_embedding_column_to_chunks.py  c3d4e5f67890_add_admin_and_system_documents.py  ed48eecda7c2_initial.py
backend/app/: .env.example  main.py
backend/app/api/: admin.py  auth.py  chat.py  deps.py  documents.py  files.py  health.py  router.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attachment.py  conversation.py  document.py  document_chunk.py  message.py  user.py
backend/app/schemas/: __init__.py  attachment.py  chat.py  document.py  user.py
backend/app/services/: chat_service.py  conversation_service.py  document_service.py  embedding_service.py  file_service.py  llm_service.py  retriever_service.py  user_service.py
backend/tests/: test_smoke.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: env.d.ts  main.ts  style.css
frontend/src/api/: admin.ts  auth.ts  chat.ts  documents.ts  files.ts  index.ts
frontend/src/components/: FileUpload.vue
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  index.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
(+15 files in other folders)
